force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_PH_Premium__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Premium__c</fullName>
    <label>Premium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kero Premium</fullName>
            </value>
            <value>
                <fullName>MKT PREMIA MPI08</fullName>
            </value>
            <value>
                <fullName>MKT PREMIA MPI09</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.001% Premium</fullName>
            </value>
            <value>
                <fullName>QTY PREMIA S2P02</fullName>
            </value>
            <value>
                <fullName>QTY PREMIA S2P01</fullName>
            </value>
            <value>
                <fullName>QTY PREMIA S2P03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>