force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_PH_Varkey__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Varkey__c</fullName>
    <formula>&apos;PH01&apos; &amp;   RE_Depot_Name__r.RE_Location_Code__c &amp; &apos;000000000&apos; &amp;  RE_Product_Name__r.RE_Material__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Varkey</label>
    <type>Text</type>
</CustomField>