force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_PH_Wharfage_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Wharfage_Cost__c</fullName>
    <label>Wharfage Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>