force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_Product_Classification__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Classification__c</fullName>
    <label>Product Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Fuel By-Products</fullName>
            </value>
            <value>
                <fullName>Gas Oil</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Kero</fullName>
            </value>
            <value>
                <fullName>Residual Fuel Oil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>