force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>Depot Pricing Backbone History</relationshipLabel>
    <relationshipName>Depot_Pricing_BackboneHistory</relationshipName>
    <type>Lookup</type>
</CustomField>