force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_Snh_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_Snh_Cost__c</fullName>
    <label>Storage and Handling Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>