force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_Target_Margin__c.field-meta.xml
<CustomField>
    <fullName>RE_Target_Margin__c</fullName>
    <label>Target Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>