force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_TH_HCV_Quote1__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_HCV_Quote1__c</fullName>
    <label>HCV Quote 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SING FOB KERO</fullName>
            </value>
            <value>
                <fullName>SING FOB GO 0.05%</fullName>
            </value>
            <value>
                <fullName>SING FOB FO 180</fullName>
            </value>
            <value>
                <fullName>HDGO</fullName>
            </value>
            <value>
                <fullName>SING FOB MOGAS 95</fullName>
            </value>
            <value>
                <fullName>SING FOB AGO 10PPM</fullName>
            </value>
            <value>
                <fullName>FIX Price</fullName>
            </value>
            <value>
                <fullName>FOA Price</fullName>
            </value>
            <value>
                <fullName>SING FOB MFO 0.5%</fullName>
            </value>
            <value>
                <fullName>MOGAS 92</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.001% S</fullName>
            </value>
            <value>
                <fullName>Kero</fullName>
            </value>
            <value>
                <fullName>Marine FuelOil 180</fullName>
            </value>
            <value>
                <fullName>CME Premium</fullName>
            </value>
            <value>
                <fullName>ETHANOL</fullName>
            </value>
            <value>
                <fullName>UCAP RBD CNO</fullName>
            </value>
            <value>
                <fullName>QTY PREMIA S2P01</fullName>
            </value>
            <value>
                <fullName>QTY PREMIA S2P02</fullName>
            </value>
            <value>
                <fullName>MKT PREMIA MPI08</fullName>
            </value>
            <value>
                <fullName>MKT PREMIA MPI09</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.001% Premium</fullName>
            </value>
            <value>
                <fullName>Kero Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>