force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_TH_HCV_Quote2__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_HCV_Quote2__c</fullName>
    <label>HCV Quote 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SING FOB GO 0.05%</fullName>
            </value>
            <value>
                <fullName>GTL</fullName>
            </value>
            <value>
                <fullName>Ethanol</fullName>
            </value>
            <value>
                <fullName>POME</fullName>
            </value>
            <value>
                <fullName>Ethanol_Changed</fullName>
            </value>
            <value>
                <fullName>Ethanol_RYG</fullName>
                <isActive>false</isActive>
                <label>Ethanol_RYG</label>
            </value>
            <value>
                <fullName>Ethanol_SRC</fullName>
                <isActive>false</isActive>
                <label>Ethanol_SRC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>