force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_TH_HCV_Surcharges__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_HCV_Surcharges__c</fullName>
    <label>RE TH HCV Surcharges</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>