force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_TH_QP__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_QP__c</fullName>
    <label>QP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>