force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_TH_QP_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_QP_Unit__c</fullName>
    <label>QP Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD/BBL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>