force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/RE_TH_Sales_Tax_Duty_5__c.field-meta.xml
<CustomField>
    <fullName>RE_TH_Sales_Tax_Duty_5__c</fullName>
    <label>Sales Tax/Duty-5</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>