force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/Record_Action__c.field-meta.xml
<CustomField>
    <fullName>Record_Action__c</fullName>
    <label>Depot Pricing Backbone Record Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inserted</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Undeleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>