force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <inlineHelpText>Depot Pricing Backbone System Modstamp</inlineHelpText>
    <label>Depot Pricing Backbone System Modstamp</label>
    <type>DateTime</type>
</CustomField>