force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/fields/TH_15_to_30_factor__c.field-meta.xml
<CustomField>
    <fullName>TH_15_to_30_factor__c</fullName>
    <label>TH 15 to 30 factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>