force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/recordTypes/Canada.recordType-meta.xml
<RecordType>
    <fullName>Canada</fullName>
    <active>true</active>
    <description>Record type for Revolution Canada</description>
    <label>Canada</label>
</RecordType>