force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/recordTypes/Thailand.recordType-meta.xml
<RecordType>
    <fullName>Thailand</fullName>
    <active>true</active>
    <description>Use for Thailand CBU calculation</description>
    <label>Thailand</label>
</RecordType>