force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/listViews/Canada.listView-meta.xml
<ListView>
    <fullName>Canada</fullName>
    <columns>NAME</columns>
    <columns>RE_CND_Rack__c</columns>
    <columns>RE_CND_Group__c</columns>
    <columns>RE_Product_Codes__c</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Product_Classification__c</columns>
    <columns>RE_Location_Name__c</columns>
    <columns>RE_CND_Parent_Rack__c</columns>
    <columns>RE_Is_Active__c</columns>
    <columns>RE_CND_Differential_Basis__c</columns>
    <columns>RE_CND_Product_Pricing_Basis__c</columns>
    <columns>RE_CND_Plant_Pricing_Basis__c</columns>
    <columns>RE_CND_Group_Pricing_Basis__c</columns>
    <columns>RE_CND_Pricing_Basis__c</columns>
    <columns>RE_Final_Price_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Depot_Pricing_Backbone__c.Canada</value>
    </filters>
    <filters>
        <field>RE_CND_Rack__c</field>
        <operation>equals</operation>
        <value>Kamloops</value>
    </filters>
    <filters>
        <field>RE_Product_Codes__c</field>
        <operation>equals</operation>
        <value>400004655</value>
    </filters>
    <filters>
        <field>RE_CND_Location_Code__c</field>
        <operation>equals</operation>
        <value>c182</value>
    </filters>
    <label>Canada</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Canada</territoryAndSubordinates>
    </sharedTo>
</ListView>