force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/listViews/Copy_of_Philippines.listView-meta.xml
<ListView>
    <fullName>Copy_of_Philippines</fullName>
    <columns>NAME</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Final_Price_Unit__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RE_Valid_From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Depot_Pricing_Backbone__c.Philippines</value>
    </filters>
    <label>Copy of Philippines</label>
</ListView>