force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/listViews/PH_2021.listView-meta.xml
<ListView>
    <fullName>PH_2021</fullName>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>NAME</columns>
    <columns>RE_Cost_Price_Adjustment__c</columns>
    <columns>RE_Cost_Price_Adjustment_Unit__c</columns>
    <columns>RE_Final_Price_Unit__c</columns>
    <columns>RE_PH_Blend_Percentage__c</columns>
    <columns>RE_Primary_Transport_Cost__c</columns>
    <columns>RE_Primary_Transport_Offset__c</columns>
    <columns>RE_Primary_Transport_Unit__c</columns>
    <columns>RE_Snh_Cost__c</columns>
    <columns>RE_SnH_Unit__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Depot_Pricing_Backbone__c.Philippines</value>
    </filters>
    <label>PH - 2021</label>
    <sharedTo>
        <territory>Revolution_Territory.Philippines</territory>
    </sharedTo>
</ListView>