force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/listViews/Philippines_NMIF.listView-meta.xml
<ListView>
    <fullName>Philippines_NMIF</fullName>
    <columns>RE_PH_Varkey__c</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>Material_Code__c</columns>
    <columns>NAME</columns>
    <columns>RE_PH_BIO_Fixed__c</columns>
    <columns>RE_PH_Premium__c</columns>
    <columns>RE_Fixed_Premium__c</columns>
    <columns>RE_Fixed_Premium_Unit__c</columns>
    <columns>RE_Fixed_Premium_Percentage__c</columns>
    <columns>RE_Final_Price_Unit__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Backbone_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Depot_Pricing_Backbone__c.Philippines</value>
    </filters>
    <label>Philippines</label>
</ListView>