force-app/main/default/objects/RE_Depot_Pricing_BackboneHistory__c/listViews/Zonal_Update_Montreal_ULSD_QC0.listView-meta.xml
<ListView>
    <fullName>Zonal_Update_Montreal_ULSD_QC0</fullName>
    <columns>NAME</columns>
    <columns>RE_CND_Rack__c</columns>
    <columns>RE_CND_Group__c</columns>
    <columns>RE_CND_Location_Code__c</columns>
    <columns>RE_Product_Codes__c</columns>
    <columns>RE_CND_Product_Group__c</columns>
    <columns>RE_CND_Pricing_Basis__c</columns>
    <columns>RE_CND_Product_Differentials__c</columns>
    <columns>RE_CND_Plant_Differential__c</columns>
    <columns>RE_CND_Brand_Discount__c</columns>
    <columns>RE_CND_Brand_Fees__c</columns>
    <columns>RE_CND_Special_Adjustment__c</columns>
    <columns>RE_Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Depot_Pricing_Backbone__c.Canada</value>
    </filters>
    <filters>
        <field>RE_CND_Product_Group__c</field>
        <operation>contains</operation>
        <value>QC07</value>
    </filters>
    <filters>
        <field>RE_CND_Product_Group__c</field>
        <operation>notContain</operation>
        <value>SDX</value>
    </filters>
    <label>Zonal Filter - Montreal ULSD QC07</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Canada</territoryAndSubordinates>
    </sharedTo>
</ListView>